--- a/Parfume/Views/Home/SaleCredite.cshtml
+++ b/Parfume/Views/Home/SaleCredite.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Parfume.Models.Card>
+﻿@model Parfume.Models.SaleModel
 @{
     ViewData["Title"] = "SaleCredite";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -44,7 +44,7 @@
             <input type="text" class="form-control WhoIsOkey " />
         </div>
 
-       
+
         <div class="col-3 mt-3">
             <label class="labelColor">Doğum tarixı</label>
             <div class="input-group date" id="Birthdate" data-target-input="nearest">
@@ -53,6 +53,17 @@
                     <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                 </div>
             </div>
+        </div>
+        <div class="col-3 mt-3">
+            <label class="labelColor">Bonus kime verilir</label>
+            <select class="form-control references ">
+                <option value="0">Sec</option>
+                @foreach (var item in Model.Customers)
+                {
+                    <option value="@item.Id">@item.Name @item.Surname  (@item.BonusAmount bonus)</option>
+
+                }
+                </select>
         </div>
 
 
@@ -113,6 +124,10 @@
             <input type="number" class="form-control firstPrice " />
         </div>
         <div class="col-3">
+            <label class="labelColor">Bonusdan ödəniş</label>
+            <input type="number" class="form-control bonusPrice " />
+        </div>
+        <div class="col-3">
             <label class="labelColor">Müddət</label>
             <select class="form-control duration ">
                 <option value="1">1 ay</option>
@@ -121,6 +136,7 @@
                 <option value="4">4 ay</option>
                 <option value="5">5 ay</option>
                 <option value="6">6 ay</option>
+                <option value="7">7 ay</option>
                 <option value="8">8 ay</option>
                 <option value="12">12 ay</option>
             </select>
@@ -131,7 +147,7 @@
             <input type="text" readonly class="form-control monthlyPayment " />
         </div>
 
-        <div class="col-3">
+        <div class="col-3 mt-3">
             <label class="labelColor">Toplam qiymət</label>
             <input type="number" class="form-control totalPrice " />
         </div>
@@ -139,7 +155,7 @@
             <label class="labelColor">Kart</label>
             <select class="form-control cardInfo">
                 <option value="0"> Kart seçin</option>
-                @foreach (var item in Model)
+                @foreach (var item in Model.Cards)
                 {
                     <option value="@item.Id">@item.Name @item.Limit</option>
                 }
