--- a/Parfume/Views/Customer/BlockCustomer.cshtml
+++ b/Parfume/Views/Customer/BlockCustomer.cshtml
@@ -35,7 +35,7 @@
                         @if (User.IsInRole("Admin"))
                         {
                     <td>
-                        <button type="button" class="btn btn-info removeInBlock" data-CustomerIdBlock="@item.Id" style="  width:180px; ">
+                        <button type="button" class="btn btn-info removeInBlock" data-custId="@item.Id" style="  width:180px; ">
                             Blokdan cixartmaq
                         </button>
                     </td>
