--- a/Parfume/Views/Home/SaleCash.cshtml
+++ b/Parfume/Views/Home/SaleCash.cshtml
@@ -34,6 +34,17 @@
             <input type="text" class="form-control InstagramAddress " />
         </div>
         <div class="col-3 mt-3">
+            <label class="labelColor">Bonusu miqdari</label>
+            <input type="text" class="form-control BonusAmount " />
+        </div>
+        <div class="col-3 mt-3">
+            <label class="labelColor">Bonusu əlavə olunsun?</label>
+            <select class="form-control hasBonus ">
+                <option value="true">Bəli</option>
+                <option value="false">Xeyr</option>
+                </select>
+        </div>
+        <div hidden class="col-3 mt-3">
             <label class="labelColor">Bonus kime verilir</label>
             <select class="form-control references ">
                 <option value="0">Sec</option>
