--- a/Parfume/Views/Report/ReportCreateNew.cshtml
+++ b/Parfume/Views/Report/ReportCreateNew.cshtml
@@ -53,7 +53,7 @@
             <input type="text" class="form-control   FirstBalans" readonly />
         </div>
         <div class="col-3 mt-3">
-            <label class="labelColor">Bonus gələn pul</label>
+            <label class="labelColor">Bonusdan cixan pul</label>
             <input type="text" class="form-control   Bonus" readonly />
         </div>
         <div class="col-3 mt-3">
