--- a/Parfume/Views/Home/HistoryDetails.cshtml
+++ b/Parfume/Views/Home/HistoryDetails.cshtml
@@ -99,6 +99,10 @@
             <label class="labelColor">Qiyməti</label>
             <input type="text" readonly class="form-control text-center  " value="@Model.Price" />
         </div>
+        <div class="col-2 mt-3">
+            <label class="labelColor">Bonusdan cixilan</label>
+            <input type="text" readonly class="form-control text-center  " value="@Model.BonusPrice" />
+        </div>
         @if (User.IsInRole("Admin"))
         {
             <div class="col-2 mt-3">
